# ron_asset_manager

./: .gitignore  Cargo.toml  README.md  publish.sh
assets/: my_car.ron
derive/: Cargo.toml
derive/src/: lib.rs
examples/: simple.rs
src/: lib.rs
