[workspace]
members = [".", "derive"]

[package]
name = "ron_asset_manager"
version = "0.3.1"
edition = "2021"
authors = ["Lorenz Mielke"]
description = "A dead simple crate to manage Ron based assets which depend on other assets."
keywords = ["bevy", "assets", "ron", "configuration"]
license = "MIT"
repository = "https://github.com/Lommix/ron_asset_manager.git"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_asset"] }
ron_asset_derive = "0.3.0"
ron = "0.8.1"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.66"

[dev-dependencies]
bevy = "0.14"
