[package]
name = "ron_asset_derive"
version = "0.3.1"
edition = "2021"
authors = ["Lorenz Mielke"]
description = "a proc macro to help with asset dependencies"
keywords = ["bevy", "assets", "ron", "configuration"]
license = "MIT"
repository = "https://github.com/Lommix/ron_asset_manager.git"

[lib]
proc-macro = true

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_asset"] }
serde = { version = "1.0.214", features = ["derive"] }
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.86"
